--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Install dependencies
         run: npm ci
+        working-directory: ./client
         
       - name: Run a ng build
-        run: npm run build:ci
+        run: ng build:ci
+        working-directory: ./client
