--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:ci": "ng build --prod --sourceMap=false --base-href /DatingApp/",
+    "build:ci": "ng build --prod --sourceMap=false --base-href /DatingApp/ --output-path=../API/wwwroot",
     "test:ci": "ng test --watch=false --code-coverage --source-map true"
   },
   "private": true,
