--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,10 @@ jobs:
         run: npm run build:ci
         #run: npm run build
         working-directory: ./client
+        
+      - name: Commit Changes
+      - uses: EndBug/add-and-commit@v7
+        with:
+          add: .
+          push: true
+      
