--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,6 @@ jobs:
       - uses: EndBug/add-and-commit@v7
         with:
           add: .
+          branch: ActionBranch
           push: true
       
