--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ on:
     #branches: [ ActionTest ]
   pull_request:
     branches: [ main ]
+    paths:
+      - '**.html'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
